dark mode issue fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,14 +9,14 @@
 
 /* Dark theme */
 .dark {
-  --background: #110202;
-  --foreground: #ffffff;
+  --background: #ffffff;
+  --foreground: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #000000;
   }
 }
 
